--- a/table.html
+++ b/table.html
@@ -12,18 +12,132 @@
 <body>
     <table style="width:50%">
         <tr>
-            <th>N</th>
+            <th>Number</th>
             <th>Time</th>
-            <th>Mv</th>
+            <th>Magnitude</th>
             <th>Stream</th>
         </tr>
-<-- this goes first -->
-        <tr>
-            <td>1</td>
-            <td>12:50:53</td>
-            <td>3</td>
-            <td>SPO</td>
-        </tr>
+	
+<tr>
+<td>Interval</td>
+<td>13:40:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>13:45:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>1</td>
+<td>13:48:01</td>
+<td>3</td>
+<td>PER</td>
+</tr>
+<tr>
+<td>2</td>
+<td>13:48:03</td>
+<td>2</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>3</td>
+<td>13:48:11</td>
+<td>3</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>13:50:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>13:55:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:00:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:05:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>4</td>
+<td>14:06:54</td>
+<td>S</td>
+<td>PAUZA</td>
+</tr>
+<tr>
+<td>5</td>
+<td>14:07:10</td>
+<td>E</td>
+<td>PAUZA</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:10:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>6</td>
+<td>14:11:38</td>
+<td>2</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>7</td>
+<td>14:12:27</td>
+<td>2</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>8</td>
+<td>14:12:51</td>
+<td>2</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>9</td>
+<td>14:13:37</td>
+<td>2</td>
+<td>SPO</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:15:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:20:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:25:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Interval</td>
+<td>14:30:00</td>
+<td>-</td>
+<td>-</td>
+</tr>
     </table>
 </body>
 </html>
